--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ main{
     font-size: clamp(4rem, 4rem + 10vw, 8.8rem);
 
     display: flex;
+    justify-content: center;
 
     margin-bottom: 1.6rem;
 }
@@ -72,5 +73,5 @@ footer{
     align-self: end;
     justify-self: end;
 
-    padding: 0 4rem 3.3rem;
+    padding: 0 4rem 4rem;
 }
